Modify few config parameters name

--- a/Config/config.ini
+++ b/Config/config.ini
@@ -1,8 +1,14 @@
 [SectionOne]
 BROWSER:Chrome
+ChromeDriverPath : /Users/tml//TestCode/chromedriver
 URL:https://undphq06wa001.azurewebsites.net/
+LogInEmailId : sandip.mahajan@undp.org
+Password : Quest12!@
 Tenant :India
-EmailId:prashant.tambe@undp.org
+UserEmailId : prashant.tambe@undp.org
 UserName:Prashant Tambe
 MobileNumber:1234567890
 FleetName:Baner
+ScreeshotPath : /Users/tml/Desktop/Automation_Projects/Python_Project/PythonSelFramework/Screenshots/
+UserDeleteMassage : User - prashant.tambe@undp.org has been deleted successfully.
+FleetDeleteMassage : Baner has been deleted successfully.
