Added some extra changes

--- a/Config/config.ini
+++ b/Config/config.ini
@@ -1,7 +1,7 @@
 [SectionOne]
 BROWSER:Chrome
 ChromeDriverPath : /Users/tml//TestCode/chromedriver
-URL:https://undphq06wa001.azurewebsites.net/
+URL:https://uuuuundphq06wa001.azurewebsites.net/
 LogInEmailId : sandip.mahajan@undp.org
 Password : Quest12!@
 Tenant :India
